# gubtool

./: Cargo.toml  README.md
gubtool/: Cargo.toml
gubtool/src/: config.rs  main.rs
gubtool/src/core/: event.rs  item.rs  mem.rs  mod.rs  travel.rs  utility.rs
gubtool/src/offsets/: code_cave.rs  cs_dlc_imp.rs  cs_flipper_imp.rs  field_area.rs  functions.rs  hooks.rs  map_debug_flags.rs  menu_man.rs  mod.rs  patches.rs  virtual_memory_flag.rs
gubtool/src/resources/: asm.rs  bosses.rs  graces.rs  talk_commands.rs
gubtool/src/tui/: app.rs  elden_beast_map.rs  fuzzy_finder.rs  help.rs  input_handler.rs  mod.rs
src/: cli.rs  main.rs
src/config/: mod.rs  preferences.rs  ui_state.rs
src/core/: attach.rs  chr_ins.rs  common.rs  game_state.rs  mod.rs  player.rs  sys.rs  target.rs  utils.rs
src/ds2/: chr_ctrl.rs  game_state.rs  item.rs  mem.rs  mod.rs  player.rs  travel.rs  utility.rs  utils.rs
src/ds2/offsets/: code_cave.rs  functions.rs  game_manager_imp.rs  hooks.rs  mod.rs
src/ds2/resources/: asm.rs  mod.rs  warps.rs
src/er/: chr_ins.rs  event.rs  game_state.rs  item.rs  mem.rs  mod.rs  player.rs  target.rs  travel.rs  utility.rs  utils.rs
src/er/offsets/: chr_dbg_flags.rs  chr_ins.rs  code_cave.rs  cs_dlc_imp.rs  cs_flipper_imp.rs  damage_manager.rs  field_area.rs  (+10 more)
src/offsets/: chr_dbg_flags.rs  chr_ins.rs  damage_manager.rs  game_data_man.rs  game_man.rs  world_chr_man.rs
src/resources/: aow.rs
src/tui/: app.rs  event.rs  fuzzy_finder.rs  game_screen_selector.rs  help.rs  input.rs  mod.rs  process_selection.rs  process_selector.rs  theme.rs
(+60 files in other folders)
